<resources>
    <string name="app_name">Pizza Builder</string>
    <string name="title_activity_home">Home</string>

    <string name="google_token">831212067819-e43q4b5uo4admo6th9ke227eqb24dlvv.apps.googleusercontent.com</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="inicio">Inicio</string>
    <string name="comunidad">Comunidad</string>
    <string name="mi_perfil">Mi Perfil</string>
    <string name="carrito">Mi Pedido</string>
    <string name="historial_de_pedidos">Historial de pedidos</string>
    <string name="iniciar_sesi_n_con_google">Iniciar sesión con Google</string>
    <string name="la_pizza_que_vos_queres">La Pizza que vos querés</string>
    <string name="logo">logo</string>
    <string name="armar_una_pizza">Armar una Pizza</string>
    <string name="salsas">Salsas</string>
    <string name="quesos">Quesos</string>
    <string name="precio">Precio</string>
    <string name="toppings">Toppings</string>
    <string name="simbolo_peso">$</string>
    <string name="pizza_prev">Previsualización de la Pizza</string>
    <string name="add_to_cart">Añadir al pedido</string>
    <string name="title_activity_dialog_confirm_pizza">DialogConfirmPizza</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="volver">Volver</string>
    <string name="title_activity_maps">Map</string>

    <!-- PERMISOS DE UBICACION -->
    <string name="permission_rationale_location">Vamos a establecer el lugar en el que querés recibir tu pedido. Para eso necesitamos que permitas a la aplicación acceder al servicio ubicación.</string>
    <string name="location_permission_denied">Se ha denegado el permiso de acceso al servicio de ubicación. Podes activarlo de manera manual en las configuraciones del sistema.</string>
    <string name="permission_required_toast">Se requiere el permiso de ubicación.</string>
    <string name="confirmar_ubicacion">Confirmar ubicación</string>
    <string name="departamento">Departamento</string>
    <string name="direccion">Dirección</string>
    <string name="piso">Piso</string>
    <string name="confirmanos_tu_ubicacion">Confirmanos tu ubicación</string>
    <string name="confirmar_pizza">Confirmar Pizza</string>
    <string name="salsa">Salsa:</string>
    <string name="queso">Queso:</string>
    <string name="dialog_toppings">Toppings:</string>
    <string name="confirmar">Confirmar</string>
    <string name="cancelar">Cancelar</string>

    <!-- JUEGO -->
    <string name="hint_start">TOCA PARA INICIAR</string>
    <string name="score_high">RÉCORD: %d</string>
    <string name="weapon_pellet">Pellet Gun</string>
    <string name="weapon_watermelon">Watermelon Cannon</string>
    <string name="weapon_grape">Grape Shooter</string>
    <string name="weapon_watermelons">Watermelon Sprayer</string>
    <string name="weapon_pellets">Pellet Sprayer</string>
    <string name="weapon_laser">Laser</string>
    <string name="weapon_seed">Grape Seed Sprayer</string>
    <string name="weapon_brick">Brick Thrower</string>
    <string name="weapon_lasers">Laser Sprayer</string>
    <string name="weapon_particle">Particle Cannon</string>
    <string name="weapon_particles">Particle Cannons</string>
    <string name="weapon_particles2">More Particle Cannons</string>
    <string name="weapon">Arma: %s</string>
    <string name="msg_out_of_ammo">Sin munición</string>
    <string name="msg_weapon_equipped">Arma Equipada: %s</string>
    <string name="msg_too_many_projectiles">Si disparas mucho te vas a quedar sin munición.</string>
    <string name="msg_free_refill">Normalmente solo recargarías cuando destruyas 4 asteroides, pero por esta vez, tomá uno gratis.</string>
    <string name="msg_hold_distance">Mantené precionado para moverte una distancia más larga.</string>
    <string name="msg_dont_get_hit">Que no te peguen los asteroides!</string>
    <string name="msg_press_to_move">Presioná en cualquier parte del lado izquierdo o derecho para mover tu nave.</string>
    <string name="msg_come_back_anytime">Eso es todo por ahora. Podés volver a ver el tutorial en cualquier momento usado el icono de información.</string>
    <string name="msg_get_refill">Normalmente los conseguís destruyendo 5 asteroides.</string>
    <string name="msg_used_ammo">Parece que te quedaste sin munición. Tomá una recarga.</string>
    <string name="msg_double_tap_fire">Doble toque para disparar. Destruí los asteroides para ganar puntos.</string>
    <string name="msg_weapon_upgrades_total">Hay 12 mejoras de armas en total.</string>
    <string name="msg_get_weapon">Obtenés una nueva arma después de destruir 20 asteroides.</string>
    <string name="msg_this_is_weapon">Esto es un arma. Mové la nave cerca para recogerlo.</string>
    <string name="msg_destroy_asteroid">Destruí el asteroide para ganar un punto.</string>
    <string name="msg_move_near_ammunition">Move la nave cerca de la caja de munición para recogerla.</string>
    <string name="msg_move_near_weapon">Move la nave cerca de la caja del arma para recogerla.</string>
    <string name="msg_sign_in_error">An error occurred while trying to sign in… :P</string>
    <string name="title_sign_out">Sign out?</string>
    <string name="msg_sign_out">Are you sure you want to sign out of Google Play Games?</string>
    <string name="title_animation_speed">Animation Speed</string>
    <string name="desc_animation_speed">It appears that your phone\'s animator duration has been modified in developer settings.
        It is highly recommended that you revert this setting to its original value in order for the game to run properly.</string>



</resources>