<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/menu"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_builder"
            android:icon="@drawable/ic_pizza"
            android:title="@string/armar_una_pizza" />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_favorite"
            android:title="Favoritos" />
        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/ic_cart"
            android:title="@string/carrito" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/mi_perfil" />
        <item
            android:id="@+id/nav_community"
            android:icon="@drawable/ic_community"
            android:title="Comunidad" />
    </group>
    <group
        android:id="@+id/options"
        android:checkableBehavior="single">
        <item
            android:id="@+id/menu_logout"
            android:icon="@drawable/ic_logout"
            android:onClick="onClickLogout"
            android:title="@string/cerrar_sesion" />
    </group>
</menu>