<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardCornerRadius="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/dialog_header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/main_gradient"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/confirmar_pizza"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/banner_bg"
                tools:ignore="ContentDescription" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <TextView
            android:id="@+id/lblSalsa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/salsa"
            android:textColor="@color/naranja_base"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dialog_header" />

        <TextView
            android:id="@+id/lblQueso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/queso"
            android:textColor="@color/naranja_base"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblSalsa" />

        <TextView
            android:id="@+id/lblTopp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/dialog_toppings"
            android:textColor="@color/naranja_base"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblQueso" />

        <TextView
            android:id="@+id/txt_dialogSalsa"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:textColor="@color/drawer_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/lblSalsa"
            app:layout_constraintTop_toTopOf="@+id/lblSalsa" />

        <TextView
            android:id="@+id/txt_dialogQueso"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:textColor="@color/drawer_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/lblQueso"
            app:layout_constraintTop_toTopOf="@+id/lblQueso" />

        <TextView
            android:id="@+id/txt_dialogToppings"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:textColor="@color/drawer_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/lblTopp"
            app:layout_constraintTop_toTopOf="@+id/lblTopp" />

        <com.google.android.material.card.MaterialCardView
            android:layout_width="120dp"
            android:layout_height="40dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="20dp"
            app:cardElevation="0dp"
            app:cardPreventCornerOverlap="false"
            app:cardUseCompatPadding="false"
            app:layout_constraintBottom_toTopOf="@+id/dialog_btnClose"
            app:layout_constraintEnd_toEndOf="@+id/divider7"
            app:layout_constraintStart_toEndOf="@+id/dialog_btnCancelar"
            app:layout_constraintTop_toBottomOf="@+id/txt_dialogToppings"
            app:strokeColor="@color/naranja_base"
            app:strokeWidth="1dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/linearLayout3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/dialog_txtCantidad"
                    android:layout_width="80dp"
                    android:layout_height="0dp"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="1"
                    android:textColor="@color/naranja_base"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/dialog_btnAdd"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="HardcodedText" />

                <Button
                    android:id="@+id/dialog_btnSubstract"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:elevation="0dp"
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    android:text="-"
                    android:textColor="@color/naranja_base"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:cornerRadius="20dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:rippleColor="@color/color_base2"
                    app:strokeWidth="0dp"
                    tools:ignore="HardcodedText" />

                <Button
                    android:id="@+id/dialog_btnAdd"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="40dp"
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    android:text="+"
                    android:textColor="@color/naranja_base"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:cornerRadius="20dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/dialog_btnSubstract"
                    app:layout_constraintTop_toTopOf="parent"
                    app:rippleColor="@color/color_base2"
                    app:strokeWidth="0dp"
                    tools:ignore="HardcodedText" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/dialog_txtPrecio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:text=""
            android:textColor="@color/teal_700"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/dialog_btnCancelar"
            app:layout_constraintEnd_toEndOf="@+id/dialog_btnCancelar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_dialogToppings" />

        <View
            android:id="@+id/divider7"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="100dp"
            android:background="@color/naranja_base"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_dialogToppings" />

        <Button
            android:id="@+id/dialog_btnCancelar"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/cancelar"
            android:textColor="@color/gray_600"
            app:layout_constraintEnd_toStartOf="@+id/divider5"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider7"
            app:rippleColor="@color/color_base2"
            app:strokeWidth="0dp" />

        <Button
            android:id="@+id/dialog_btnClose"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/confirmar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/divider5"
            app:layout_constraintTop_toBottomOf="@+id/divider7"
            app:rippleColor="@color/color_base2"
            app:strokeWidth="0dp" />

        <View
            android:id="@+id/divider5"
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:background="@color/naranja_base"
            app:layout_constraintBottom_toBottomOf="@+id/dialog_btnClose"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider7" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
